# AI-Assurance-Toolkit

./: README.md  pyproject.toml  requirements.txt
examples/: setup_test_model.py
src/ai_assurance_toolkit/: __init__.py  cli.py  performance_evaluator.py
src/ai_assurance_toolkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_import.py
