[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-assurance-toolkit"
version = "0.1.0"
description = "A Python toolkit for evaluating AI model reliability, performance, and deployment readiness."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Happy Iguare", email = "haigu1@morgan.edu" }
]

keywords = [
  "ai assurance",
  "model evaluation",
  "machine learning",
  "responsible ai",
  "model audit",
  "nist ai rmf",
  "public sector ai"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Quality Assurance",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]

dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "joblib>=1.3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "build>=1.2",
  "twine>=5.0",
  "ruff>=0.5"
]

[project.scripts]
ai-assurance = "ai_assurance_toolkit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]